services/queenbee/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queenbee
spec:
  selector:
    app.kubernetes.io/name: queenbee
  ports:
    - port: 3000
      targetPort: http
