services/queenbee/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: queenbee
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - queenbee-next.login.no
  rules:
    - host: queenbee-next.login.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: queenbee
                port:
                  number: 3000
